--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,9 +3,9 @@ spring:
     name: hp-blog
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hpBlog?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://182.92.81.46:3306/hpBlog?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: 123456
+    password: qwer123456
   devtools:
     restart:
       enabled: true
