--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,2 +1,12 @@
 
-
+spring:
+  application:
+    name: hp-blog
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://182.92.81.46:3306/hpBlog?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: qwer123456
+  devtools:
+    restart:
+      enabled: true
